# qc-cmake-test

./: README.md
demo1/: CMakeLists.txt  Makefile
demo2/: CMakeLists.txt
demo3/: CMakeLists.txt  Makefile
demo3/math/: CMakeLists.txt
demo4/: CMakeLists.txt
demo5/: CMakeLists.txt  main.cc
demo5/math/: CMakeLists.txt
demo6/: CMakeLists.txt  main.cc
demo7/: CMakeLists.txt  config.h.in  main.cc
demo8/: CMakeLists.txt
